--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ MOT16/
 
 # ignore models
 dnn_utils/models/
+
+evaluation/MOT16-train/fast_track/**
+evaluation/MOT16-train/fast_track/data/**
+!evaluation/MOT16-train/fast_track/data/
