--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "TrackEval"]
+[submodule "evaluation/TrackEval"]
 	path = evaluation/TrackEval
 	url = https://github.com/JonathonLuiten/TrackEval.git
