--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "evaluation/TrackEval"]
-	path = evaluation/TrackEval
+[submodule "TrackEval"]
+	path = TrackEval
 	url = https://github.com/JonathonLuiten/TrackEval.git
